Code cleanup
git-svn-id: https://svn.code.sf.net/p/kmttg/code/trunk@4279 b0df3fdd-2057-4f73-b226-dfc9190e8f7a